# FARfetched-data

./: .gitignore  CLAUDE.md  README.md  build.py  plan.md  pyproject.toml
data/aircraft/: A16WE.json
data/aircraft/cessna-aircraft-company/: 172.json
data/aircraft/the-boeing-company/: 737-800.json
data/regulations/faa/23/: 1.json  1015.json  1019.json  1021.json  1023.json  1041.json  1101.json  1103.json  1121.json  1143.json  1153.json  1181.json  1201.json  1203.json  1301.json  1307.json  1322.json  1323.json  1325.json  1337.json  1387.json  1389.json  1419.json  1435.json  1457.json  1501.json  1507.json  1541.json  1545.json  1555.json  1559.json  1563.json  1567.json  157.json  1581.json  1583.json  1585.json  1587.json  1589.json  175.json  (+73 more)
data/regulations/faa/25/: 1309.json  _part.json
data/regulations/faa/car-3/: 106.json  186.json  221.json  252.json  255.json  265.json  294.json  (+33 more)
schemas/: aircraft.schema.json  aircraft_model.schema.json  regulation.schema.json  regulation_part.schema.json
tests/: conftest.py  manual_provenance_manifest.txt  test_actions.py  test_build.py  test_discover.py  test_easa_alias.py  test_easa_emit.py  test_easa_extract.py  test_fr_extract.py  test_manual_provenance.py  test_validation.py
tests/fixtures/invalid_aircraft/: bad_entry_type.json  empty_cert_basis.json  extra_field.json  missing_required.json  range_missing_bounds.json  unknown_reference_kind.json
tests/fixtures/invalid_regulations/: additional_property.json  bad_date.json  bad_designator.json  empty_amendments.json  empty_text.json  missing_required.json
