[project]
name = "farfetched-data"
version = "0.1.0"
description = "Source data and build pipeline for the FARFETCHed cert basis dataset."
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-jsonschema>=4.21",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests", "tools/tests"]
addopts = "-q"
